--- a/TemplateTPCorto/Negocio/Negocio.csproj
+++ b/TemplateTPCorto/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LoginNegocio.cs" />
+    <Compile Include="CambioContrasenaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
