--- a/TemplateTPCorto/Datos/Datos.csproj
+++ b/TemplateTPCorto/Datos/Datos.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Login\Credencial.cs" />
+    <Compile Include="modelos\Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
