--- a/TemplateTPCorto/Negocio/Negocio.csproj
+++ b/TemplateTPCorto/Negocio/Negocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="LoginNegocio.cs" />
     <Compile Include="CambioContrasenaNegocio.cs" />
+    <Compile Include="PersonaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
