--- a/TemplateTPCorto/Negocio/Negocio.csproj
+++ b/TemplateTPCorto/Negocio/Negocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OperacionesNegocio.cs" />
     <Compile Include="LoginNegocio.cs" />
     <Compile Include="CambioContrasenaNegocio.cs" />
     <Compile Include="PersonaNegocio.cs" />
