cambio en logica de aprobacion modificacion persona

--- a/TemplateTPCorto/Datos/Datos.csproj
+++ b/TemplateTPCorto/Datos/Datos.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Login\Credencial.cs" />
+    <Compile Include="modelos\AppState.cs" />
     <Compile Include="modelos\OperacionesDesbloqueo.cs" />
     <Compile Include="modelos\OperacionesModificacion.cs" />
     <Compile Include="modelos\Persona.cs" />
