Add list products

--- a/TemplateTPCorto/TemplateTPCorto/TemplateTPCorto.csproj
+++ b/TemplateTPCorto/TemplateTPCorto/TemplateTPCorto.csproj
@@ -108,6 +108,9 @@
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormVentas.resx">
+      <DependentUpon>FormVentas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
