Carrito de compras Fase 1: Validaciones sobre cantidades mayores a 0 Stock positivo Mover productos del listado al carrito

--- a/TemplateTPCorto/Negocio/Negocio.csproj
+++ b/TemplateTPCorto/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdministradorNegocio.cs" />
+    <Compile Include="CarritoNegocio.cs" />
     <Compile Include="OperacionesNegocio.cs" />
     <Compile Include="LoginNegocio.cs" />
     <Compile Include="CambioContrasenaNegocio.cs" />
