--- a/TemplateTPCorto/Datos/Datos.csproj
+++ b/TemplateTPCorto/Datos/Datos.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Ventas\CategoriaProductos.cs" />
     <Compile Include="Ventas\Cliente.cs" />
     <Compile Include="Ventas\Producto.cs" />
+    <Compile Include="Ventas\ProductoEnCarrito.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
