http resquest paraa pago

--- a/TemplateTPCorto/Datos/Datos.csproj
+++ b/TemplateTPCorto/Datos/Datos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Login\Credencial.cs" />
     <Compile Include="modelos\AppState.cs" />
     <Compile Include="modelos\Autorizaciones.cs" />
+    <Compile Include="modelos\VentaItemRequest.cs" />
     <Compile Include="modelos\OperacionesDesbloqueo.cs" />
     <Compile Include="modelos\OperacionesModificacion.cs" />
     <Compile Include="modelos\Persona.cs" />
